initial robot logic